--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,14 @@
   "rules": {
     "semi": ["error", "never"],
     "@typescript-eslint/semi": ["error", "never"],
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "format": ["strictCamelCase", "PascalCase", "UPPER_CASE"],
+        "selector": ["variable"],
+        "leadingUnderscore": "allow"
+      }
+    ],
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
