--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.1",
+    "@chakra-ui/theme": "^2.1.0",
+    "@chakra-ui/theme-tools": "^2.0.2",
+    "@chakra-ui/utils": "^2.0.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^6",
     "next": "12.1.6",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
+    "@chakra-ui/system": "^2.1.3",
     "@types/node": "18.0.0",
+    "@types/prop-types": "^15.7.5",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
@@ -37,6 +43,7 @@
   },
   "peerDependencies": {
     "@babel/core": "^7.18.5",
+    "@chakra-ui/system": "^2.1.3",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "eslint-plugin-import": "^2.26.0",
