--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/input": "^2.0.2",
     "@chakra-ui/react": "^2.2.1",
     "@chakra-ui/theme": "^2.1.0",
     "@chakra-ui/theme-tools": "^2.0.2",
