--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@chakra-ui/utils": "^2.0.2",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@react-icons/all-files": "^4.1.0",
     "framer-motion": "^6.4.3",
     "next": "12.1.6",
     "prop-types": "^15.8.1",
