--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@chakra-ui/utils": "^2.0.2",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@react-icons/all-files": "^4.1.0",
     "framer-motion": "^6.4.3",
     "next": "12.1.6",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
