--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "framer-motion": "^6.4.3",
+    "immer": "^9.0.15",
     "next": "12.1.6",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "use-immer": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
